--- a/mobile.html
+++ b/mobile.html
@@ -34,6 +34,14 @@
     <option>카테고리 선택</option>
   </select>
   <div id='map'></div>
+  <div id="bottom-sheet">
+    <div class="title">
+      <button id="opener" class="btn btn-dark btn-block">열어보기</button>
+    </div>
+    <div id="listing">
+
+    </div>
+  </div>
   <script src="app.js"></script>
 </body>
 
