--- a/mobile.html
+++ b/mobile.html
@@ -36,7 +36,7 @@
   <div id='map'></div>
   <div id="bottom-sheet">
     <div class="title">
-      <button id="opener" class="btn btn-dark btn-block">열어보기</button>
+      <button id="opener" class="btn btn-dark btn-block">열기</button>
     </div>
     <div id="listing">
 
