--- a/mobile.html
+++ b/mobile.html
@@ -37,6 +37,9 @@
   <div id="bottom-sheet">
     <div class="title">
       <button id="opener" class="btn btn-primary btn-block">열기</button>
+      <div>
+        모임은 <a href="https://moim.at" target="_blank" style="text-decoration: underline;">MOIM</a>에서!
+      </div>
     </div>
     <div id="listing">
 
