로고로 변경

--- a/mobile.html
+++ b/mobile.html
@@ -38,7 +38,9 @@
     <div class="title">
       <button id="opener" class="btn btn-primary btn-block">열기</button>
       <div>
-        모임은 <a href="https://moim.at" target="_blank" style="text-decoration: underline;">MOIM</a>에서!
+        모임은 <a href="https://moim.at" target="_blank">
+          <img src="moim.png" alt="" srcset="" width="100px;">
+        </a>에서!
       </div>
     </div>
     <div id="listing">
