--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <title>2019 서울 맛집 지도</title>
-
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta hid='description' name='description' content='2019 서울 맛집 지도'>
+  <meta data-n-head="true" property="og:site_name" content="2019 서울 맛집 지도">
   <!-- <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" /> -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
     integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
