--- a/index.html
+++ b/index.html
@@ -51,3 +51,12 @@
 </body>
 
 </html>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131548129-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-131548129-2');
+</script>
