광고를 더 잘 누를 수 있게 변경

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="title">
       <button id="opener" class="btn btn-primary btn-block">열기</button>
       <div class="ad-moim">
-        (광고) 모임 약속 정하기는 <a href="https://moim.at" target="_blank" style="text-decoration: none;"><img src="moim.png" alt="" srcset=""></a>에서!
+        <a href="https://moim.at" target="_blank" style="color: #333; text-decoration: none;">(광고) 모임 약속 정하기는 <img src="moim.png" alt="" srcset="">에서!</a>
       </div>
     </div>
     <div id="listing">
