--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta hid='description' name='description' content='2019 서울 맛집 지도'>
   <meta data-n-head="true" property="og:site_name" content="2019 서울 맛집 지도">
-  <meta hid='og:image' name="og:image" content="og_image.png">
+  <meta hid='og:image' name="og:image" content="https://mz.moim.at/og_image.png">
   <!-- <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" /> -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
     integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
